@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX 1.06-strlen-typo.patch 505 SHA256 4a73d097338f44d4d9a3aa4f3900da7f4196cbf67bb5d4ff33ce91a38dd78f9f SHA512 05f3ae4bd9ab38fa61406d418ac126dc3027371fc8b073e51362aa763895fdac144d7949fc600c5d3303bec9b5d07703d1ec38cb7e7a81d1652e577c3fad648b WHIRLPOOL 33d01efb8295d9b4bd752ca02d1180de99b04195746f81444f39f4a497c91d4be8fe6bb2d36b93bd2dc4506152ff4ef869a6d9d7dde1538594310457bc0664ad
 AUX cciss_vol_status.cron 646 SHA256 55fc6c33788c9846f758555be7316248d4054ed10738e8a0e3e6245ffcc0dd74 SHA512 658004668f6d1914c1526e07113eaee9a24e8d1945ab378a27537e9fd421e5b39eeb5f56610d59bebcbc6d7b2addfce65fee697b6877d164775b696930591a56 WHIRLPOOL 130108e1d029882460d26ad6ac925520824e059c626364097eedc812662d2fd737ed78717873dd7db2a7ca0fb847264b1997ab580f8cc041522c0d19dc851adb
@@ -9,23 +9,23 @@ DIST cciss_vol_status-1.10.tar.gz 107233 SHA256 803110bf3f7d49f3b03e299e9a5209eb
 EBUILD cciss_vol_status-1.03.ebuild 608 SHA256 b28ba94c22806c8d5d2310f1cc6dc513efa04e5a80649f6b90e194dbbcac8ad8 SHA512 bd40893240d053cb64aa399d179402fcca4fcbdcf9c63b3cec6ac36e97ee32612d5978e780af34e7e14cd935401e016169280b457a2642f2695d6a979b44115c WHIRLPOOL 38a069e7b4fe3120c02c7e68a5fc1cfc53fe0378ff64ba03a71b13188c9ae88f291b1066cb86af28513c4cdb72a5b65a0a480946b47a29f2bfe7f3a256fda853
 EBUILD cciss_vol_status-1.09-r1.ebuild 703 SHA256 c927c1767cf081f879d583b54e35957fe4e246d05cee0b88c43933adddf82078 SHA512 49456ad9fc3faf8072117790f939c4f688ff324d8fb1402e07ca92c3b1b3c4a3979097e0f7c5b063892c13df7648fb170bc6806e7cbbf0ece6724e471e40a3eb WHIRLPOOL 6c15603f177f0510e74357e4654766ad5d9c33d06319dda9d99fdd2091b51320fbe259d3fc75c2578a84883e61fd607b31cb4e41ef417ad898dd70121d8dffd5
 EBUILD cciss_vol_status-1.09.ebuild 621 SHA256 53e899ebd95300991ab91a0b50ac97012efcbfcd9d6f8e31732c2c786d8feaa1 SHA512 e3be2b1c9452ff137aa0e75822323b8fd12682e69a14d0a5ef10ca0607ac49e54e08a9db7683c489c9777976e0e2ca652151b3563bf595709df49063d0b8ae1b WHIRLPOOL f7c954ba500650f9159230c8763ff16e4bc3d33cd7a64b7b7ea1b3f9d5820bebe3f98628f4d5b11ff7ee69c19c400b71e6c8a67fec877104c44890cb2c8bd8df
-EBUILD cciss_vol_status-1.10.ebuild 701 SHA256 28607f4c898419c52fd3633e315467af75af895b75b035dab6c26ab35c6acaab SHA512 f933f3a893843a55bb84cca6d78bfa03820b35975b3b9549c533ca36b1100bc02035671a881e125286123afc36f1c749507330e5f08cb3d3055bcd1fcd4ba96a WHIRLPOOL 14fc3b43a4360297b67575bd197f83f93a13b04a241129b97b4b5e1f97a9bc248685952f8678c373326a891cd9e09ca95d0cbcaa64c99afcc357465325667e80
-MISC ChangeLog 3459 SHA256 00505ea34acabf05fb64a2c407f349b5a4b8e58305d626576122b7f7efdcdb36 SHA512 e53211430840aab067fc588b03d803987f19b3aec96265f7875c6444d42c6160925adf6cc6cd5cf39ae304039daeca19de49b87bebeccd69da29d354e38cc15e WHIRLPOOL 40b390a3967771c5f989766205467fc282f1dd1c2b6ed269932fec45d3004a27a860124c9efce4e414faf46ce42b5ce56c3a66aaac88f6d429fd52a69d8bd971
+EBUILD cciss_vol_status-1.10.ebuild 710 SHA256 ca5036985a3d58d2afc0f2f9901e16f10d67e5b9cbe9ad5d6c18b44ef09c7ddf SHA512 d77df7d1ff0db817fffc6fad23649a14b067d698521928f5e17d28c449f10269ff0fec47150bf8e37e7a0bd19d3e17ff27b33c2127deb78ae7b05d58c45e9ed2 WHIRLPOOL 194ca3e6ef76b272de796d4154d64de0d942b19812a38f54e4fc446d25f6ac5b5b7a585792f6bfc31edb41357e434efae8c7412633607d48db1a1467aa709eac
+MISC ChangeLog 3560 SHA256 16eabc554dbaf5f0e1a56834e17e5f08d2c49f782682e5e98afe837aaca39982 SHA512 79ee16c427597e38d4a6801ad3a7e24f8ae22af671d84e5694bd0f9d0f6ee21df7fb411412f02d473141b529dae217bf1c801159e162c7f8b0be84b125bb6c11 WHIRLPOOL 513a7df5ac1079daaef3d7dc4f6fbe24745851475287afd4746f35a8497f6dd53b37e8afa1895dfcf33b1320e3f398b5fe2e7407b0180c9c52d074433521da46
 MISC metadata.xml 254 SHA256 2817a53a07dd68fef8ec5467cb1a8441e87d77bd7eaf8ce9971de1adfbab7bdc SHA512 63686301cf18075f7e7578ada8a699da06f3e6fbc58f5066deb568709213efffd21e128818431d2bf54c32e421928113c480a6d6b70ddb56c46c47bad16b2536 WHIRLPOOL 5a074386445ff37caa546bc45133721249a79ac1d7c93248912d1c3dfb4e1ba874920cea6ffb06ae93330df2ddb47a3c3d6092d3b32076a930c639b32868bb21
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRSD5XAAoJELp701BxlEWfpFsP/07jCl2xAxhpIeSZoZWPB5Fy
-71VjjhB2rwTye/tOX3g+pUEfJqZ59r8ek2H+vOW2CiuPIe2Bk9XSjbsNrRIGmgnA
-LL98VBD7ydZAikkB4Hthc9dgEtwz7/3A/tHMxKDg5keYKUrEqTwSf+5iqARhym6n
-xsgP0d5zBdVHyHesPOSiCskGmxNUWE49G7hx72DChv64+8MyG1tRQejNTXBrFzJE
-xY8C9M0g6+XQ61VlKlILTYchG3Hl1vcvUn3+HnknCG0khK7CExT9AO1+KAuHTc2P
-8LI+5KxhDxeBGFxhvt19mtYehLOkCu/T2Xtadj7EqjGi2QUat63+GWkmcvRE2mHz
-Lvhgi9q+2N57Bj7FyvbhJIdEY5GXuSGpwTB3pZ9RJ6dlEnnPdGF38UVD4Q5lyCRb
-0y+t1Ed+F9rll4/BVbICGOZBPer3Gfh1njF9a/KyUuz6HnlK3qitKXt+9KZR+cV1
-FFdcYkMQWxrVi/Em49TEPg+m99+WWDTAj6jdZvaaOSXzg3lmwTUFH7QdkXJWlODi
-4GsZFkh/Konn5B9rGJmXZ05/E7w05N2T7vjxIdMrery0bUGFe+OKPM/GCcsyyY4N
-dZhy6OK9u8DZvXPO3ADg1qW0kjqETH7xLMhCwCWEvnhGzq12SuRm4WFANYIv5OgL
-9QXvHnyC59tRGM8jMZvX
-=PqqB
+iQIcBAEBCAAGBQJTG5koAAoJEPGu1DbS6WIAQL8P/0vWl2OTayO3T2icUZX2dWV/
+br550bJNOcXIOfWMyxJXk7tMdKpiKpleFGrGckliVWc7k1MKO60c0z8vLWJbXC6Z
+GEKb1JnieJJKExbwB6i1w/LfIXzhqtsDuV2a7XMZJTuPMgVCYyTONZVFxhhnhEID
+1Y1p4kkzYQdxv9kvrBMe2iyXCRB4RuiQ2UK5q12vER8tn+ei5n8vLp3yZpZLiQst
+xWCOs+2JCiILQJ0yaEhStKV3dQc+oa8jDNVvk86+uSsc3WEe3ElmginBiQjepiLc
+B307Qo9cjiGNQOG7UcXkLYmCWmOTvX+p579lowTmuuQUijmvJvOMRbLhvGAz32WP
+sMtl905qiCjsGhJGgZOpAAiEz+xOW5jCdQ9PajQwF8JcR1XrjwIKDh9uJB1yjA8p
+yNJDGaHNslBYiG4mJoSU7M9Jjqtgu04+D8gxJ/oZWQf6rBT01Qo/T60KoHfYASFx
+p3gZ3Uo0KpZT1T+pyFddRe+IV7BfdN6ahj/tdXKHlHeztzshFKXtbJB5PEXEDNa8
+bBRCH48rsisXxXo/6oeedUYkWdRRvAtneArKfjGDdbA57AISefHcqEAZv5HHx737
+yBkX/fGHujXBl+P/fymd95IkAgtO/0ctr001EF7VK+ZjudaXcCn8SbymvVjHqNn4
+nJVjXsam0xldmpIJCsw+
+=xhdM
 -----END PGP SIGNATURE-----
