@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/cciss_vol_status/cciss_vol_status-1.10.ebuild,v 1.3 2013/03/19 10:30:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/cciss_vol_status/cciss_vol_status-1.10.ebuild,v 1.4 2014/03/08 22:26:43 vapier Exp $
 
 EAPI=4
 
@@ -9,7 +9,7 @@ DESCRIPTION="Shows status of logical drives attached to HP SmartArray controller
 HOMEPAGE="http://cciss.sourceforge.net/#cciss_utils"
 LICENSE="GPL-2"
 SRC_URI="mirror://sourceforge/cciss/${P}.tar.gz"
-KEYWORDS="amd64 x86"
+KEYWORDS="amd64 ~ia64 x86"
 SLOT="0"
 RDEPEND=""
 DEPEND=""
