@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/cciss_vol_status
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/cciss_vol_status/ChangeLog,v 1.15 2013/03/19 10:30:53 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/cciss_vol_status/ChangeLog,v 1.16 2014/03/08 22:26:43 vapier Exp $
+
+  08 Mar 2014; Mike Frysinger <vapier@gentoo.org> cciss_vol_status-1.10.ebuild:
+  Add ia64 love.
 
   19 Mar 2013; Agostino Sarubbo <ago@gentoo.org> cciss_vol_status-1.10.ebuild:
   Stable for x86, wrt bug #457466
