@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/arrayprobe
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/arrayprobe/ChangeLog,v 1.9 2013/12/23 03:53:52 vapier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/arrayprobe/ChangeLog,v 1.10 2014/03/08 22:26:56 vapier Exp $
+
+  08 Mar 2014; Mike Frysinger <vapier@gentoo.org> arrayprobe-2.0-r2.ebuild:
+  Add ia64 love.
 
   23 Dec 2013; Mike Frysinger <vapier@gentoo.org> arrayprobe-2.0-r2.ebuild:
   Update to EAPI=4.
